// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularProgress should render as light if set 1`] = `
<svg
  aria-busy="true"
  aria-label="Loading "
  className="tc-circular-progress theme-loader theme-loaderlight theme-animate theme-default"
  focusable="false"
  viewBox="0 0 50 50"
>
  <circle
    className="theme-path"
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={
      Object {
        "strokeDasharray": 12.566370614359172,
        "strokeDashoffset": 0,
      }
    }
  />
</svg>
`;

exports[`CircularProgress should render at large size if set 1`] = `
<svg
  aria-busy="true"
  aria-label="Loading "
  className="tc-circular-progress theme-loader theme-animate theme-large"
  focusable="false"
  viewBox="0 0 50 50"
>
  <circle
    className="theme-path"
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={
      Object {
        "strokeDasharray": 12.566370614359172,
        "strokeDashoffset": 0,
      }
    }
  />
</svg>
`;

exports[`CircularProgress should render at small size if set 1`] = `
<svg
  aria-busy="true"
  aria-label="Loading "
  className="tc-circular-progress theme-loader theme-animate theme-small"
  focusable="false"
  viewBox="0 0 50 50"
>
  <circle
    className="theme-path"
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={
      Object {
        "strokeDasharray": 12.566370614359172,
        "strokeDashoffset": 0,
      }
    }
  />
</svg>
`;

exports[`CircularProgress should render by default at default size 1`] = `
<svg
  aria-busy="true"
  aria-label="Loading "
  className="tc-circular-progress theme-loader theme-animate theme-default"
  focusable="false"
  viewBox="0 0 50 50"
>
  <circle
    className="theme-path"
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={
      Object {
        "strokeDasharray": 12.566370614359172,
        "strokeDashoffset": 0,
      }
    }
  />
</svg>
`;

exports[`CircularProgress should render with percent if set 1`] = `
<svg
  aria-busy="true"
  aria-label="Loading 30%"
  className="tc-circular-progress theme-loader theme-fixed theme-default"
  focusable="false"
  viewBox="0 0 50 50"
>
  <circle
    className="theme-path"
    cx={25}
    cy={25}
    fill="none"
    r={20}
    style={
      Object {
        "strokeDasharray": 125.66370614359172,
        "strokeDashoffset": 87.96459430051421,
      }
    }
  />
</svg>
`;
